# lin_h

./: LICENSE  README.md  lin.h  meson.build
src/: main.c
test/: mat.c  vec.c
